Create custome services

--- a/eShop-WebAPI/Eshop.Domain.Contracts/Eshop.Domain.Contracts.csproj
+++ b/eShop-WebAPI/Eshop.Domain.Contracts/Eshop.Domain.Contracts.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Eshop.DAL.Implementations\Eshop.DAL.Implementations.csproj" />
+  </ItemGroup>
+
 </Project>
