--- a/eShop-WebAPI/Eshop.Web/Eshop.Web.csproj
+++ b/eShop-WebAPI/Eshop.Web/Eshop.Web.csproj
@@ -11,6 +11,11 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="HotChocolate" Version="11.3.7" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="11.3.7" />
+    <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
+    <PackageReference Include="HotChocolate.Types" Version="11.3.7" />
+    <PackageReference Include="HotChocolate.Types.Filters" Version="11.3.7" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
       <PrivateAssets>all</PrivateAssets>
