--- a/eShop-WebAPI/Eshop.Web/appsettings.json
+++ b/eShop-WebAPI/Eshop.Web/appsettings.json
@@ -1,13 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;User Id=postgres;Password=ppwrb4y;Database=eshopdb;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "Connnectionstrings": {
-    "DefaultConnection": "Server=localhost;Database=eshopdb;user id=postgres;password=ppwrb4y;"
   },
   "AllowedHosts": "*"
 }
