--- a/eShop-WebAPI/TestReact/appsettings.Development.json
+++ b/eShop-WebAPI/TestReact/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Username=postgres;Password=ppwrb4y;Database=testdb;Pooling=true;Integrated Security=true;"
   }
 }
