--- a/eShop-WebAPI/Eshop.Web/Eshop.Web.csproj
+++ b/eShop-WebAPI/Eshop.Web/Eshop.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -18,6 +18,7 @@
     <PackageReference Include="HotChocolate.Data.EntityFramework" Version="11.3.7" />
     <PackageReference Include="HotChocolate.Types" Version="11.3.7" />
     <PackageReference Include="HotChocolate.Types.Filters" Version="11.3.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
       <PrivateAssets>all</PrivateAssets>
@@ -43,12 +44,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="GraphQL\Models\Shipments\" />
     <Folder Include="AdminPanelApp\" />
     <Folder Include="GraphQL\Models\RefPaymentMethods\" />
     <Folder Include="GraphQL\Models\CustomerPaymentMethods\" />
     <Folder Include="GraphQL\Models\RefOrderStatusCodes\" />
-    <Folder Include="GraphQL\Models\RefProductTypes\" />
     <Folder Include="GraphQL\Models\RefInvoiceStatusCodes\" />
     <Folder Include="GraphQL\Models\OrderItems\" />
     <Folder Include="GraphQL\Models\RefOrderItemStatusCodes\" />
